--- a/anchor_tag.html
+++ b/anchor_tag.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <p>this page shows the use of ancher tag</p><br>
-    <a href="www.google.com"> <u>click here to go to google.com</u></a>
+    <a href="https://www.google.com/"> <u>click here to go to google.com</u></a>
+    <p>below link will take you to another tab</p>
+    <a href="https://www.google.com/" target="_blank"> another tab of google</a>
 </body>
 </html>
