--- a/demaonSlayer.html
+++ b/demaonSlayer.html
@@ -7,11 +7,12 @@
     <title>Deamon Slayer</title>
 </head>
 <body>
+    <h1 style="color: blueviolet ;text-align: center;">Demon slayer</h1>
     <p>This is one of the best animes to watch
         below are some visuals from the anime 
     </p>
     <img src="D:\best story website\peakpx.jpg" height="500" width="750">
-    <img src="D:\best story website\img2.jpg" alt="">
+    <img src="D:\best story website\img2.jpg" height="500" width="750">
 
 </body>
 </html>
