--- a/backgroung_image.html
+++ b/backgroung_image.html
@@ -7,6 +7,7 @@
     <style>
         body{
             background-image: url("https://png.pngtree.com/thumb_back/fh260/background/20201026/pngtree-futuristic-shape-abstract-background-chemistry-technology-concept-for-website-image_438818.jpg");
+            background-size: 100%;
         }
     </style>
     <title>Background Image</title>
