--- a/backgroung_image.html
+++ b/backgroung_image.html
@@ -8,6 +8,7 @@
         body{
             background-image: url("https://png.pngtree.com/thumb_back/fh260/background/20201026/pngtree-futuristic-shape-abstract-background-chemistry-technology-concept-for-website-image_438818.jpg");
             background-size: 100%;
+            background-repeat: no-repeat;
         }
     </style>
     <title>Background Image</title>
