--- a/display_properties.html
+++ b/display_properties.html
@@ -26,6 +26,9 @@
     <p class="inline">so we are using block display value on image tags lets see if it works</p>
     <h3>below two image taga are without block diplay</h3>
     <img height="300px" width="500px" src="D:\images for websites\cypher.png">
-    <img height="300px" src="D:\images for websites\cypher1.png" >
+    <img height="300px" src="D:\images for websites\cypher1.png">
+    <h3>now we use block display value on image tags</h3>
+    <img class="block" height="500px" width="800px" src="D:\images for websites\astraCypher.jpg">
+    <img class="block" height="400px" width="400px" src="D:\images for websites\astra.jpg" alt="">
 </body>
 </html>
