--- a/combinator_selector.html
+++ b/combinator_selector.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Combinator selector</title>
     <style>
-        .div_style > p{
+        .div_style ~ p{
             background-color: aqua;
             display: inline-block;
 
