--- a/psudo_element_selector.html
+++ b/psudo_element_selector.html
@@ -13,6 +13,10 @@
         p::before{
             content: "*";
         }
+
+        p::first-letter{
+            color: blue;
+        }
     </style>
 </head>
 <body>
