--- a/visibility_property.html
+++ b/visibility_property.html
@@ -13,6 +13,8 @@
         .show:hover + .div{
             visibility: visible;
         }
+
+        
     </style>
 </head>
 <body>
@@ -22,6 +24,13 @@
     </div>
     <div class="div">
         <p>this is the hidden content</p>
+    </div>
+
+    <div class="show">
+        <P>hover over me again</P>
+        <div class="div">
+            <p>this is the hidden content</p>
+        </div>
     </div>
 </body>
 </html>
