--- a/visibility_property.html
+++ b/visibility_property.html
@@ -14,6 +14,9 @@
             visibility: visible;
         }
 
+        .show:hover .div{
+            visibility: visible;
+        }
         
     </style>
 </head>
