--- a/resume/index.html
+++ b/resume/index.html
@@ -13,6 +13,9 @@
         <input type="text" name="search" id="search-box" placeholder="search for keywords to filter for results">
         <button id="next">next</button>
     </section>
+    <div id="error-container">
+        <p id="error-message">No Match found <br> Clear the search box and press Enter key to go back</p>
+    </div>  
     <section id="resume-template">
         <header>
             <h1 id="name"> pravin </h1>
